# ypsummit2024

./: CMakeLists.txt  COPYING.MIT  README.md
lib/: CMakeLists.txt  mylib.c  mylib.h
src/: CMakeLists.txt  main.c
